Minor button styling tweak: avoid shifting buttons when tooltip appears.
Margins don't collapse when there's a tooltip between them; shift margins
around so that they don't need to.

--- a/blackboard.less
+++ b/blackboard.less
@@ -78,6 +78,9 @@ body {
     .tooltip.bottom .tooltip-arrow {
       border-bottom-color: #eee;
     }
+    /* tweak to fix up moving buttons when tooltip appears */
+    .bb-protect { margin-right: -1px; }
+    .bb-unprotect { margin-left: 0; }
   }
   .bb-breadcrumbs .tooltip-inner { .bb-buttonbar .tooltip-inner; }
   .bb-breadcrumbs .tooltip.bottom .tooltip-arrow { .bb-buttonbar .tooltip.bottom .tooltip-arrow; }
